--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DiceChancer</string>
+    <string name="decrement">-</string>
+    <string name="increment">+</string>
+    <string name="calculate_text">Calculate</string>
 </resources>
